# Bulletin_Board

./: Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  locustfile.py  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
advertisements/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py  0002_alter_advertisement_created_at.py  0003_comment.py  0004_advertisement_role.py  0005_remove_advertisement_role.py
config/: settings.py  urls.py
tests/: test_app.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active.py  0003_user_role.py  0004_alter_user_groups_alter_user_is_active_and_more.py  0005_alter_user_groups_alter_user_is_active.py
